--- a/index.html
+++ b/index.html
@@ -14,33 +14,33 @@
                     <img src="img/imagen1.jpg" alt="imagen1">
                 </div>
                 <div>
-                    <h3>NEWSLETTER</h3>
+                    <h3>UAX</h3>
                 </div>
             </div>
         </header>
         <div class="cuerpo">
-            <h1>Newsletter!</h1>
-            <p class="parrafo">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labpre et</p>
+            <h1>¡BIENVENIDOS A LA UNIVERSIDAD ALFONSO x EL SABIO!</h1>
+            <p class="parrafo">Una vez más, les damos una calurosa bienvenida a la Universidad Alfonso X el Sabio. Estamos emocionados de tenerlos como parte de nuestra comunidad y deseamos que aprovechen al máximo todas las oportunidades que les brindaremos durante su tiempo con nosotros.</p>
             <div class="imagen2">
                 <img src="img/imagen1.jpg" alt="imagen1">
             </div>
-            <p class="parrafo"> Lorem ipsum dolor sit amet, consectetur adipsicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Consectetut adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+            <p class="parrafo"> A continuación, una breve presentación de nuestras mejores instalaciones.</p>
 
             <div class="bloqueabajo">
                 <div class="cabecerabloqueabajo">
-                    <h2>Title Ipsum</h2>
-                    <p class="parrafobloque1">This is a note</p>
+                    <h2>Cafetería</h2>
+                    <p class="parrafobloque1">¡Nuevas variedades de comida disponibles!</p>
                 </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipsicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p>En la Universidad Alfonso X el Sabio, te invitamos a descubrir una variedad de opciones gastronómicas que satisfarán tus antojos y te mantendrán alimentado durante tu jornada académica. Nuestra cafetería ofrece una amplia gama de deliciosos platos, como hamburguesas jugosas, ensaladas frescas, exquisitos platos italianos y mucho más.</p>
                 <button class="boton"> Clickity Click >> </button>
             </div>
 
             <div class="bloqueabajo">
                 <div class="cabecerabloqueabajo">
-                    <h2>Title Ipsum</h2>
-                    <p class="parrafobloque1">This is a note</p>
+                    <h2>UAX RAFA NADAL SPORTS ACADEMY</h2>
+                    <p class="parrafobloque1">¡Descubre las increíbles instalaciones deportivas de la UAX Rafa Nadal Sports Academy!</p>
                 </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipsicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p>En la Universidad Alfonso X el Sabio, estamos orgullosos de contar con una colaboración excepcional con la Rafa Nadal Sports Academy para ofrecerte instalaciones deportivas de primer nivel. Si eres amante del deporte y buscas un lugar donde llevar tus habilidades al siguiente nivel, ¡has llegado al lugar adecuado!</p>
                 <button class="boton"> Clickity Click >> </button>
             </div>
 
